# OS

./: GitSync.cmd  GitSync.sh
lab1/: CMakeLists.txt  GitSync.cmd
lab2/: CMakeLists.txt  child.c  libprocess.c  main.c
lab2/src/: child.c  libprocess.c  main.c
lab3/: CMakeLists.txt
lab3/src/: copy1.c  copy2.c  main.c
lab4/: CMakeLists.txt
lab4/src/: main.c  serial.c  simulator.c
lab5/: CMakeLists.txt
lab5/src/: main.c  serial.c  simulator.c  temp.c
lab6/: README.md
lab6/.moc/: gui.moc  moc_gui.cpp
lab6/GUI/: TempGUI.pro
lab6/GUI/lib/: libqwt.so.6.2.0
lab6/GUI/src/: main.cpp  mainwindow.cpp  mainwindow.h
lab6/Server/: CMakeLists.txt
lab6/Server/lib/: libjson-c.so.5.4.0
lab6/Server/src/: html_response.h  json_response.h  main.c  simulator.c  temp.c
lab7/: README.md
